--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -206,7 +206,7 @@
                     <div class="col-xl-6 col-lg-7">
                         <div class="cta-two__content">
                             <div class="block-title text-left">
-                                <p class="block-title__tag-line">Checkout App Features
+                                <p class="block-title__tag-line">Fitur Pembayaran
 
                                 </p><!-- /.block-title__tag-line -->
                                 <h2 class="block-title__title">Control Everything From <br>
