--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -209,7 +209,7 @@
                                 <p class="block-title__tag-line">Fitur Pembayaran
 
                                 </p><!-- /.block-title__tag-line -->
-                                <h2 class="block-title__title">Control Everything From <br>
+                                <h2 class="block-title__title">Kontrol<br>
                                     One Application</h2><!-- /.block-title__title -->
                             </div><!-- /.block-title -->
                             <p class="cta-two__tagline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
