--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -249,20 +249,11 @@
                     <div class="col-xl-6 col-lg-7">
                         <div class="cta-three__content">
                             <div class="block-title text-left">
-                                <p class="block-title__tag-line">Checkout App Features
                                 </p><!-- /.block-title__tag-line -->
-                                <h2 class="block-title__title">Discover the Powerful <br>
-                                    Tools For Your Repeat <br>
-                                    Customers</h2><!-- /.block-title__title -->
+                                <h2 class="block-title__title">Benefit Untuk Sekolah &<br>
+                                    Yayasan</h2><!-- /.block-title__title -->
                             </div><!-- /.block-title -->
-                            <p class="cta-three__text">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry
-                                when an unknown printer took a galley of type and scrambled it to make. Lorem ipsum
-                                dolor sit
-                                amet, consectetur adipisicing elit, sed do eiusmod tempor anagi icdunt ut labore et
-                                dolore magna
-                                aliqua.</p><!-- /.cta-two__tagline -->
-
+                            <p class="cta-three__text">Semua tagihan seperti SPP, Uang Buku, Sumbangan dan lain-lain, akan lebih mudah diinformasikan dan dibayarkan oleh orang tua siswa.</p><!-- /.cta-two__tagline -->
                             <a href="#" class="thm-btn cta-three__btn">Discover More</a><!-- /.thm-btn -->
                         </div><!-- /.cta-two__content -->
                     </div><!-- /.col-lg-5 -->
