--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -152,7 +152,7 @@
         <section class="service-one">
             <div class="container">
                 <div class="block-title text-center">
-                    <p class="block-title__tag-line">Metode Pembayaran
+                    <p class="block-title__tag-line">Keunggulan
                     </p><!-- /.block-title__tag-line -->
                     <h2 class="block-title__title">Layanan Kami</h2><!-- /.block-title__title -->
                 </div><!-- /.block-title -->
