--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -206,32 +206,28 @@
                     <div class="col-xl-6 col-lg-7">
                         <div class="cta-two__content">
                             <div class="block-title text-left">
-                                <p class="block-title__tag-line">Fitur Pembayaranm
+                                <p class="block-title__tag-line">Fitur Pembayaran
 
                                 </p><!-- /.block-title__tag-line -->
-                                <h2 class="block-title__title">Kontrol<br>
-                                    One Application</h2><!-- /.block-title__title -->
+                                <h2 class="block-title__title">Manfaat<br>
+                                    Dengan bayarSPP</h2><!-- /.block-title__title -->
                             </div><!-- /.block-title -->
-                            <p class="cta-two__tagline">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                eiusmod
-                                tempor anagi icdunt.</p><!-- /.cta-two__tagline -->
+                            <p class="cta-two__tagline">Kemudahan dalam pembayaran dapat
+                                membantu anda ketika sedang sibuk atau tidak sempat datang langsung.</p><!-- /.cta-two__tagline -->
                             <ul class="list-unstyled cta-two__list">
                                 <li>
                                     <i class="cta-two__list-icon fa fa-check"></i>
                                     <!-- /.cta-two__list-icon fa fa-check -->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        anagi
-                                        icdunt ut labore et dolore magna aliqua.</p>
+                                    <p>Kemudahan akses pengguna untuk semua kalangan.</p>
                                 </li>
                                 <li>
                                     <i class="cta-two__list-icon fa fa-check"></i>
                                     <!-- /.cta-two__list-icon fa fa-check -->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        anagi
-                                        icdunt ut labore et dolore magna aliqua.</p>
+                                    <p>Tidak perlu bertemu, pembayaran secara digital 
+                                        melalui DANA, OVO, atau E-Banking.</p>
                                 </li>
                             </ul><!-- /.list-unstyled -->
-                            <a href="#" class="thm-btn cta-two__btn">Discover More</a><!-- /.thm-btn -->
+                            <a href="#" class="thm-btn cta-two__btn">Daftar Segera!</a><!-- /.thm-btn -->
                         </div><!-- /.cta-two__content -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
@@ -438,54 +434,45 @@
         <section class="pricing-one" id="pricing">
             <div class="container">
                 <div class="block-title text-center">
-                    <p class="block-title__tag-line">Pricing Tables
+                    <p class="block-title__tag-line">Info Pembayaran
                     </p><!-- /.block-title__tag-line -->
-                    <h2 class="block-title__title">Choose Pricing Plans</h2><!-- /.block-title__title -->
+                    <h2 class="block-title__title">Pilih Opsi Pembayaran</h2><!-- /.block-title__title -->
                 </div><!-- /.block-title -->
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="pricing-one__single color-1 wow fadeInDown" data-wow-duration="1500ms">
                             <div class="pricing-one__top">
-                                <h3 class="pricing-one__amount">$20.00 </h3><!-- /.pricing-one__amount -->
-                                <p class="pricing-one__name">Basic Pack</p><!-- /.pricing-one__name -->
+                                <h3 class="pricing-one__amount">Rp. 100.000,00 </h3><!-- /.pricing-one__amount -->
+                                <p class="pricing-one__name">Per-Bulan</p><!-- /.pricing-one__name -->
                             </div><!-- /.pricing-one__top -->
                             <ul class="list-unstyled pricing-one__list">
-                                <li>Extra features</li>
-                                <li>Lifetime free support</li>
-                                <li>Upgrate options</li>
-                                <li>Full access</li>
+                                <li>Pembayaran Standar</li>
                             </ul><!-- /.list-unstyled pricing-one__list -->
-                            <a href="#" class="thm-btn pricing-one__btn">Purchase</a><!-- /.thm-btn pricing-one__btn -->
+                            <a href="#" class="thm-btn pricing-one__btn">Bayar</a><!-- /.thm-btn pricing-one__btn -->
                         </div><!-- /.pricing-one__single -->
                     </div><!-- /.col-lg-4 -->
                     <div class="col-lg-4">
                         <div class="pricing-one__single color-2 wow fadeInUp" data-wow-duration="1500ms">
                             <div class="pricing-one__top">
-                                <h3 class="pricing-one__amount">$30.00 </h3><!-- /.pricing-one__amount -->
-                                <p class="pricing-one__name">Standard Pack</p><!-- /.pricing-one__name -->
+                                <h3 class="pricing-one__amount">Rp. 600.000,00 </h3><!-- /.pricing-one__amount -->
+                                <p class="pricing-one__name">Per-Semester</p><!-- /.pricing-one__name -->
                             </div><!-- /.pricing-one__top -->
                             <ul class="list-unstyled pricing-one__list">
-                                <li>Extra features</li>
-                                <li>Lifetime free support</li>
-                                <li>Upgrate options</li>
-                                <li>Full access</li>
+                                <li>Pembayaran Menengah</li>
                             </ul><!-- /.list-unstyled pricing-one__list -->
-                            <a href="#" class="thm-btn pricing-one__btn">Purchase</a><!-- /.thm-btn pricing-one__btn -->
+                            <a href="#" class="thm-btn pricing-one__btn">Bayar</a><!-- /.thm-btn pricing-one__btn -->
                         </div><!-- /.pricing-one__single -->
                     </div><!-- /.col-lg-4 -->
                     <div class="col-lg-4">
                         <div class="pricing-one__single color-3 wow fadeInDown" data-wow-duration="1500ms">
                             <div class="pricing-one__top">
-                                <h3 class="pricing-one__amount">$40.00 </h3><!-- /.pricing-one__amount -->
-                                <p class="pricing-one__name">Professional Pack</p><!-- /.pricing-one__name -->
+                                <h3 class="pricing-one__amount">Rp. 1.200.000,00 </h3><!-- /.pricing-one__amount -->
+                                <p class="pricing-one__name">Per-Tahun</p><!-- /.pricing-one__name -->
                             </div><!-- /.pricing-one__top -->
                             <ul class="list-unstyled pricing-one__list">
-                                <li>Extra features</li>
-                                <li>Lifetime free support</li>
-                                <li>Upgrate options</li>
-                                <li>Full access</li>
+                                <li>Pembayaran Full & Lunas</li>
                             </ul><!-- /.list-unstyled pricing-one__list -->
-                            <a href="#" class="thm-btn pricing-one__btn">Purchase</a><!-- /.thm-btn pricing-one__btn -->
+                            <a href="#" class="thm-btn pricing-one__btn">Bayar</a><!-- /.thm-btn pricing-one__btn -->
                         </div><!-- /.pricing-one__single -->
                     </div><!-- /.col-lg-4 -->
                 </div><!-- /.row -->
