--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -37,7 +37,7 @@
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="logo-box clearfix">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logo-light.png" class="main-logo" width="88" alt="Awesome Image" />
+                            <img src="assets/images/logoo.png" class="main-logo" width="275" alt="Awesome Image" />
                         </a>
                         <button class="menu-toggler" data-target=".main-navigation">
                             <span class="fa fa-bars"></span>
