--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -37,7 +37,7 @@
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="logo-box clearfix">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logoo.png" class="main-logo" width="275" alt="Awesome Image" />
+                            <img src="assets/images/bayarSPP-3.png" class="main-logo" width="275" alt="Awesome Image" />
                         </a>
                         <button class="menu-toggler" data-target=".main-navigation">
                             <span class="fa fa-bars"></span>
@@ -200,7 +200,7 @@
             <div class="container">
                 <div class="cta-two__image">
                     <img src="assets/images/cta-line-1-1.png" class="cta-two__line" alt="">
-                    <img src="assets/images/cta-moc-1-1.png" alt="">
+                    <img src="assets/images/" alt="" width="645" height="680">
                 </div><!-- /.cta-two__image -->
                 <div class="row justify-content-end">
                     <div class="col-xl-6 col-lg-7">
