--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -80,7 +80,7 @@
                         </ul>
                     </div><!-- /.navbar-collapse -->
                     <div class="right-side-box">
-                        <a class="thm-btn header__cta-btn" href="#">Login</a>
+                        <a class="thm-btn header__cta-btn" href="login.html">Login</a>
                     </div><!-- /.right-side-box -->
                 </div>
                 <!-- /.container -->
