--- a/adminuser/files/login.html
+++ b/adminuser/files/login.html
@@ -53,6 +53,7 @@
                       <label for="exampleInputPassword1" class="form-label">Password</label>
                       <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
+                    <p>belum punya akun?,<a href="">registrasi sekarang!!</a></p>
                     <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
