--- a/adminuser/files/login.html
+++ b/adminuser/files/login.html
@@ -45,7 +45,7 @@
               <div class="card-text">
                 <form>
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <label for="exampleInputEmail1" class="form-label">Email </label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                      
                     </div>
