--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -101,7 +101,7 @@
                             <p class="banner-one__text">Pembayaran SPP dengan mudah dan cepat.
                                 <br> Pastinya aman dan nyaman tanpa datang ke sekolah <br> mudah dan praktis dengan sekali klik.</p>
                             <!-- /.banner-one__text -->
-                            <a href="#" class="banner-one__btn thm-btn ">REGISTER</a><!-- /.thm-btn -->
+                            <a href="registrasi.html" class="banner-one__btn thm-btn ">REGISTER</a><!-- /.thm-btn -->
                         </div><!-- /.banner-one__content -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
@@ -586,7 +586,7 @@
                     <div class="row">
                         <div class="col-lg-2">
                             <div class="footer-widget footer-widget__about">
-                                <img src="assets/images/logo-light.png" width="88" alt="" class="footer-widget__logo">
+                                <img src="assets/images/bayarSPP-3.png" width="200" alt="" class="footer-widget__logo">
                                 <p class="footer-widget__contact"><a href="tel:888-666-0000">888 666 0000</a></p>
                                 <!-- /.footer-widget__contact -->
                                 <p class="footer-widget__contact"><a
