--- a/adminuser/files/login.html
+++ b/adminuser/files/login.html
@@ -53,11 +53,11 @@
                       <label for="exampleInputPassword1" class="form-label">Password</label>
                       <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <p>belum punya akun?,<a href="registrasi.html">registrasi sekarang!!</a></p>
+                    <p>Belum punya akun? <a href="registrasi.html">Registrasi sekarang!!</a></p>
                     <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                  </form>
+                    </div>
+                </form>
               </div>
           </div>
       </div>
