--- a/adminuser/files/registrasi.html
+++ b/adminuser/files/registrasi.html
@@ -55,7 +55,7 @@
                        
                       </div>
                       <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Usseername </label>
+                        <label for="exampleInputEmail1" class="form-label">Username </label>
                         <input type="text" class="form-control" id="exampleInputEmail1" >
                        
                       </div>
@@ -63,7 +63,7 @@
                       <label for="exampleInputPassword1" class="form-label">Password</label>
                       <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <p>sudah punya akun?,<a href="login.html">login sekarang!!</a></p>
+                    <p>Sudah memiliki akun? <a href="login.html">Login sekarang!!</a></p>
                     <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
