--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -60,15 +60,15 @@
                                 </ul><!-- /.sub-menu -->
                             </li>
                             <li class="scrollToLink">
-                                <a href="#features">Fitur</a>
+                                <a href="#features">Manfaat</a>
 
                             </li>
                             <li class="scrollToLink">
-                                <a href="#screenshots">Pembayaran</a>
+                                <a href="#screenshots">Bukti</a>
 
                             </li>
                             <li class="scrollToLink">
-                                <a href="#pricing">Bukti</a>
+                                <a href="#pricing">Pembayaran</a>
                             </li>
                             <li class="scrollToLink">
                                 <a href="#news">About</a>
@@ -227,7 +227,7 @@
                                         melalui DANA, OVO, atau E-Banking.</p>
                                 </li>
                             </ul><!-- /.list-unstyled -->
-                            <a href="#" class="thm-btn cta-two__btn">Daftar Segera!</a><!-- /.thm-btn -->
+                            <a href="registrasi.html" class="thm-btn cta-two__btn">Daftar Segera!</a><!-- /.thm-btn -->
                         </div><!-- /.cta-two__content -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
@@ -250,7 +250,7 @@
                                     Yayasan</h2><!-- /.block-title__title -->
                             </div><!-- /.block-title -->
                             <p class="cta-three__text">Semua tagihan seperti SPP, Uang Buku, Sumbangan dan lain-lain, akan lebih mudah diinformasikan dan dibayarkan oleh orang tua siswa.</p><!-- /.cta-two__tagline -->
-                            <a href="#" class="thm-btn cta-three__btn">Daftar Segera!</a><!-- /.thm-btn -->
+                            <a href="registrasi.html" class="thm-btn cta-three__btn">Daftar Segera!</a><!-- /.thm-btn -->
                         </div><!-- /.cta-two__content -->
                     </div><!-- /.col-lg-5 -->
                 </div><!-- /.row -->
@@ -642,7 +642,7 @@
             <div class="site-footer__bottom">
                 <div class="container">
                     <div class="inner-container">
-                        <p class="site-footer__copy">&copy; copyright 2019 by <a href="#">Layerdrops.com</a></p>
+                        <p class="site-footer__copy">&copy; Copyright 2022 by <a href="#">bayarSPP</a></p>
                         <!-- /.site-footer__copy -->
                         <div class="site-footer__social">
                             <a href="#" class="fa fa-facebook-square"></a>
