--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -283,7 +283,7 @@
             <div class="container-fluid">
                 <div class="block-title text-center">
                     <p class="block-title__tag-line">Checkout App Interface </p><!-- /.block-title__tag-line -->
-                    <h2 class="block-title__title">App Screenshots</h2><!-- /.block-title__title -->
+                    <h2 class="block-title__title">Testimoni</h2><!-- /.block-title__title -->
                 </div><!-- /.block-title -->
                 <div class="app-shot-one__carousel owl-theme owl-carousel">
                     <div class="item">
