--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -86,7 +86,7 @@
                     <div class="col-xl-6 col-lg-8">
                         <div class="banner-one__content">
 
-                            <h3 class="banner-one__title">SPP FreedomCode<br>
+                            <h3 class="banner-one__title">bayarSPP<br>
                                 </h3><!-- /.banner-one__title -->
                             <p class="banner-one__text">Pembayaran SPP dengan mudah dan cepat.
                                 <br> Pastinya aman dan nyaman tanpa datang ke sekolah <br> mudah dan praktis dengan sekali klik.</p>
