--- a/sb-admin2/tables.html
+++ b/sb-admin2/tables.html
@@ -387,24 +387,30 @@
                                             <th>Sisa</th>
                                         </tr>
                                     </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Position</th>
-                                            <th>Office</th>
-                                            <th>Age</th>
-                                            <th>Start date</th>
-                                            <th>Salary</th>
-                                        </tr>
-                                    </tfoot>
                                     <tbody>
                                         <tr>
-                                            <td>Tiger Nixon</td>
-                                            <td>System Architect</td>
-                                            <td>Edinburgh</td>
-                                            <td>61</td>
-                                            <td>2011/04/25</td>
-                                            <td>$320,800</td>
+                                            <td>Reza</td>
+                                            <td>927463 </td>
+                                            <td>september</td>
+                                            <td>Rp 600.000,00</td>
+                                            <td>Belum Lunas</td>
+                                            <td>Rp 600.000,00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Rian</td>
+                                            <td>647352 </td>
+                                            <td>november</td>
+                                            <td>Rp 1.200.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp 00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Noval</td>
+                                            <td>9287463 </td>
+                                            <td>april</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Belum Lunas</td>
+                                            <td>Rp 1.100.000,00</td>
                                         </tr>
                                     </tbody>
                                 </table>
