--- a/sb-admin2/index.html
+++ b/sb-admin2/index.html
@@ -127,12 +127,20 @@
                     <span>Charts</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="bayar.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Bayar Spp</span></a>
+            </li>
+
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span>Data Pembayaran Spp</span></a>
             </li>
+
+            
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
