--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -133,8 +133,8 @@
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
                 <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran Spp</span></a>
+                    <i class="fas fa-user"></i>
+                    <span>Data Siswa</span></a>
             </li>
 
             <!-- Divider -->
@@ -364,18 +364,11 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Tabel Data Pembayaran Spp</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Tabel Data Siswa</h1>
 
                     <!-- DataTales Tables -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <a href="bayar.html" class="btn btn-secondary btn-icon-split">
-                                <span class="icon text-white-50">
-                                    <i class="fas fa-arrow-right"></i>
-                                </span>
-                                <span class="text"> Bayar Spp </span>
-                            </a>
-                        </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
