--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -83,7 +83,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran Spp</span></a>
+                    <span>Data Siswa</span></a>
             </li>
 
             <!-- Divider -->
@@ -347,22 +347,7 @@
                                             <td>Belum Lunas</td>
                                             <td>Rp 600.000,00</td>
                                         </tr>
-                                        <tr>
-                                            <td>Rian</td>
-                                            <td>647352 </td>
-                                            <td>november</td>
-                                            <td>Rp 1.200.000,00</td>
-                                            <td>Lunas</td>
-                                            <td>Rp 00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Noval</td>
-                                            <td>9287463 </td>
-                                            <td>april</td>
-                                            <td>Rp 100.000,00</td>
-                                            <td>Belum Lunas</td>
-                                            <td>Rp 1.100.000,00</td>
-                                        </tr>
+                                        
                                     </tbody>
                                 </table>
                             </div>
