--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -70,7 +70,7 @@
                         </ul>
                     </div><!-- /.navbar-collapse -->
                     <div class="right-side-box">
-                        <a class="thm-btn header__cta-btn" href="halaman-login.php">Login</a>
+                        <a class="thm-btn header__cta-btn" href="#">Login</a>
                     </div><!-- /.right-side-box -->
                 </div>
                 <!-- /.container -->
