--- a/adminuser/files/sb-admin1/index.html
+++ b/adminuser/files/sb-admin1/index.html
@@ -81,7 +81,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span>Data Pembayaran</span></a>
             </li>
 
             <!-- Divider -->
