--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -84,7 +84,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Data Siswa</span></a>
+                    <span>Data Pembayaran</span></a>
             </li>
 
             <!-- Divider -->
@@ -314,7 +314,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Tabel Data Pembayaran Spp</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Data Pembayaran SPP</h1>
 
                     <!-- DataTales Tables -->
                     <div class="card shadow mb-4">
@@ -331,7 +331,6 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Nama Siswa</th>
                                             <th>NIK</th>
                                             <th>Bulan Bayar</th>
                                             <th>Jumlah Bayar</th>
@@ -341,12 +340,46 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Reza</td>
                                             <td>927463 </td>
-                                            <td>september</td>
-                                            <td>Rp 600.000,00</td>
-                                            <td>Belum Lunas</td>
-                                            <td>Rp 600.000,00</td>
+                                            <td>September</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp100.000,00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>123456 </td>
+                                            <td>Oktober</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp100.000,00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>234567 </td>
+                                            <td>November</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp100.000,00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>345678 </td>
+                                            <td>Desember</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp100.000,00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>456789 </td>
+                                            <td>Januari</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp100.000,00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>567890 </td>
+                                            <td>Februari</td>
+                                            <td>Rp 100.000,00</td>
+                                            <td>Lunas</td>
+                                            <td>Rp100.000,00</td>
                                         </tr>
                                         
                                     </tbody>
