--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -331,7 +331,7 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>NIK</th>
+                                            <th>NIS</th>
                                             <th>Bulan Bayar</th>
                                             <th>Jumlah Bayar</th>
                                             <th>Status</th>
@@ -340,44 +340,44 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>927463 </td>
+                                            <td>123456  </td>
                                             <td>September</td>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
-                                            <td>Rp100.000,00</td>
+                                            <td>Rp 1.100.000,00</td>
                                         </tr>
                                         <tr>
                                             <td>123456 </td>
                                             <td>Oktober</td>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
-                                            <td>Rp100.000,00</td>
+                                            <td>Rp 1.000.000,00</td>
                                         </tr>
                                         <tr>
-                                            <td>234567 </td>
+                                            <td>123456  </td>
                                             <td>November</td>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
-                                            <td>Rp100.000,00</td>
+                                            <td>Rp 900.000,00</td>
                                         </tr>
                                         <tr>
-                                            <td>345678 </td>
+                                            <td>123456  </td>
                                             <td>Desember</td>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
-                                            <td>Rp100.000,00</td>
+                                            <td>Rp 800.000,00</td>
                                         </tr>
                                         <tr>
-                                            <td>456789 </td>
+                                            <td>123456  </td>
                                             <td>Januari</td>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
-                                            <td>Rp100.000,00</td>
+                                            <td>Rp 700.000,00</td>
                                         </tr>
                                         <tr>
-                                            <td>567890 </td>
+                                            <td>123456  </td>
                                             <td>Februari</td>
-                                            <td>Rp 100.000,00</td>
+                                            <td>Rp 600.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp100.000,00</td>
                                         </tr>
