--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -69,8 +69,14 @@
                             </li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
-                    <div class="right-side-box">
-                        <a class="thm-btn header__cta-btn" href="#">Login</a>
+                    <div class="main-navigation">
+                        <li class="scrollToLink">
+                            <a href="#news">About</a>
+                            <ul class="sub-menu">
+                                <li><a href="news.html">News Page</a></li>
+                                <li><a href="news-details.html">News Details</a></li>
+                            </ul><!-- /.sub-menu -->
+                        </li>
                     </div><!-- /.right-side-box -->
                 </div>
                 <!-- /.container -->
