--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -336,19 +336,36 @@
                       <label for="exampleInputPassword1" class="form-label">NIS</label>
                       <input type="number" class="form-control" >
                     </div>
+
+                    
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Jumlah bayar</label>
+                        <input type="number" class="form-control" >
+                      </div>
+                      
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Tanggal Pembayaran</label>
                         <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                       <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Jumlah Bayar</label><br>
+                        <label for="exampleInputEmail1" class="form-label">Bulan Bayar</label><br>
                         <td>
                             <select>
-                                <option>Rp 100.000,00</option>
-                                <option>Rp 600.000,00</option>
-                                <option>Rp 1.200.000,00</option>
+                                <option>Januari</option>
+                                <option>Februari</option>
+                                <option>Maret</option>
+                                <option>April</option>
+                                <option>Mei</option>
+                                <option>Juni</option>
+                                <option>Juli</option>
+                                <option>Agustus</option>
+                                <option>September</option>
+                                <option>Oktober</option>
+                                <option>November</option>
+                                <option>Desember</option>
                             </select>
                         </td>
+
                          </div>
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Bukti</label>
