--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -29,11 +29,11 @@
 </head>
 
 <body>
-    <div class="preloader"><span></span></div><!-- /.preloader -->
-    <div class="page-wrapper">
+    <div class="preloader "><span></span></div><!-- /.preloader -->
+    <div class="page-wrapper ">
         <header class="site-header site-header__header-one ">
             <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
-                <div class="container clearfix">
+                <div class="container clearfix ">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="logo-box clearfix">
                         <a class="navbar-brand" href="index.html">
@@ -100,48 +100,6 @@
                 </div><!-- /.row -->
             </div><!-- /.container -->
         </section><!-- /.banner-one -->
-        <div class="brand-one">
-            <div class="container">
-                <div class="brand-one__carousel owl-carousel owl-theme">
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                    <div class="item">
-                        <img src="assets/images/brand-1-1.png" alt="">
-                    </div><!-- /.item -->
-                </div><!-- /.brand-one__carousel owl-carousel owl-theme -->
-            </div><!-- /.container -->
-        </div><!-- /.brand-one -->
         <section class="service-one">
             <div class="container">
                 <div class="block-title text-center">
@@ -470,20 +428,6 @@
                     </div><!-- /.col-lg-4 -->
                 </div><!-- /.row -->
             </div><!-- /.container -->
-        </section><!-- /.pricing-one -->
-        <section class="video-one" id="video">
-            <div class="container">
-                <div class="video-one__box wow fadeInUp" data-wow-duration="1500ms">
-                    <img src="assets/images/video-1-1.jpg" alt="">
-                    <div class="video-one__content">
-                        <a href="https://www.youtube.com/watch?v=coI_aT4BDNA" class="video-popup video-one__btn"><i
-                                class="fa fa-play"></i><!-- /.fa fa-play --></a>
-                        <!-- /.video-popup -->
-                        <h2 class="video-one__title">Watch Our Video</h2><!-- /.video-one__title -->
-                    </div><!-- /.video-one__content -->
-                </div><!-- /.video-one__box -->
-            </div><!-- /.container -->
-        </section><!-- /.video-one -->
 
         <section class="blog-one blog-one__home thm-gray-bg" id="news">
             <div class="container">
@@ -563,11 +507,11 @@
 
         <section class="cta-one">
             <div class="container text-center">
-                <h3 class="block-title__title">Download our App Today & <br>
-                    Experience Endless Possibilities. </h3><!-- /.block-title__title -->
-                <p class="cta-one__text">and get started with a free 1 month trial for your business</p>
+                <h3 class="block-title__title">Gunakan Sekarang!!<br>
+                   bayarSPP </h3><!-- /.block-title__title -->
+                <p class="cta-one__text">Sistem Pembayaran Yang Mudah Cepat Dan Aman</p>
                 <!-- /.cta-one__text -->
-                <a href="#" class="thm-btn cta-one__btn">Download Our App</a><!-- /.thm-btn -->
+                <a href="#" class="thm-btn cta-one__btn">Join Sekarang</a><!-- /.thm-btn -->
             </div><!-- /.container -->
         </section><!-- /.cta-one -->
         <footer class="site-footer">
