--- a/adminuser/files/sb-admin1/kalender.html
+++ b/adminuser/files/sb-admin1/kalender.html
@@ -75,7 +75,7 @@
             </li>
 
             <!-- Nav Item - Kalender -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="kalender.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Kalender</span></a>
