--- a/adminuser/files/sb-admin1/index.html
+++ b/adminuser/files/sb-admin1/index.html
@@ -74,7 +74,7 @@
             <!-- Nav Item - Kalender -->
             <li class="nav-item">
                 <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-table"></i>
+                    <i class="fas fa-fw fa-calendar"></i>
                     <span>Kalender</span></a>
             </li>
 
