--- a/adminuser/files/sb-admin1/kalender.html
+++ b/adminuser/files/sb-admin1/kalender.html
@@ -77,7 +77,7 @@
             <!-- Nav Item - Kalender -->
             <li class="nav-item active">
                 <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-table"></i>
+                    <i class="fas fa-fw fa-calendar"></i>
                     <span>Kalender</span></a>
             </li>
 
