--- a/adminuser/files/sb-admin1/kalender.html
+++ b/adminuser/files/sb-admin1/kalender.html
@@ -76,7 +76,7 @@
 
             <!-- Nav Item - Kalender -->
             <li class="nav-item active">
-                <a class="nav-link" href="kalender.html">
+                <a class="nav-link active" href="kalender.html">
                     <i class="fas fa-fw fa-calendar"></i>
                     <span>Kalender</span></a>
             </li>
