--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -68,7 +68,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link active" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Data Pembayaran</span></a>
             </li>
