--- a/adminuser/files/sb-admin1/editprofil.html
+++ b/adminuser/files/sb-admin1/editprofil.html
@@ -371,7 +371,7 @@
                     
                     <button type="submit" class="btn btn-primary" >Konfirmasi</button>
                     <left>
-                         <a href="tables.html" class="btn btn-success btn-icon-split">
+                         <a href="myprofile.php" class="btn btn-success btn-icon-split">
                             <span class="icon text-white-50">
                                 <i class="fas fa-arrow-right"></i>
                             </span>
