--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -99,7 +99,7 @@
                             <p class="banner-one__text">Pembayaran SPP dengan mudah dan cepat.
                                 <br> Pastinya aman dan nyaman tanpa datang ke sekolah <br> mudah dan praktis dengan sekali klik.</p>
                             <!-- /.banner-one__text -->
-                            <a href="registrasi.html" class="banner-one__btn thm-btn ">REGISTER</a><!-- /.thm-btn -->
+                            <a href="sb-admin1/register.html" class="banner-one__btn thm-btn ">REGISTER</a><!-- /.thm-btn -->
                         </div><!-- /.banner-one__content -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
