--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -323,6 +323,7 @@
                                             <th>NISN</th>
                                             <th>Jenis Kelamin</th>
                                             <th>Kelas/Jurusan</th>
+                                            <th>Alamat</th>
                                             <th>Aksi</th>
                                         </tr>
                                     </thead>
@@ -332,6 +333,7 @@
                                             <td>07654334567 </td>
                                             <td>Laki-laki</td>
                                             <td>IX RPL A</td>
+                                            <td>malang</td>
                                             <td>
                                                 <a href="myprofile.php" class="btn btn-info btn-icon-split">
                                                 <span class="text">detail</span>
