--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -323,19 +323,19 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead class="text-center thead-light">
                                         <tr>
-                                            <th scope="col">Bulan Bayar</th>
                                             <th scope="col">No Pembayaran</th>
+                                            <th scope="col">Bulan Bayar</th>
                                             <th scope="col">Tanggal Pembayaran</th>
                                             <th scope="col">Jumlah Bayar</th>
-                                            <th scope="col">Sisa</th>
+                                            <th scope="col">Sisa Tagihan</th>
                                             <th scope="col">Status</th>
                                             <th scope="col">Aksi</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>September</td>
                                             <td class="text-center">123456</td>
+                                            <td>September</td>
                                             <th class="text-center">12-09-2020</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Rp 1.100.000,00</td>
